--- a/Попрыженок/Попрыженок.csproj
+++ b/Попрыженок/Попрыженок.csproj
@@ -173,6 +173,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="ChangePriority.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CreateEditAgent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CreateRealization.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -181,7 +193,16 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ChangePriority.xaml.cs">
+      <DependentUpon>ChangePriority.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Context\DBContext.cs" />
+    <Compile Include="CreateEditAgent.xaml.cs">
+      <DependentUpon>CreateEditAgent.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CreateRealization.xaml.cs">
+      <DependentUpon>CreateRealization.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseConnection.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
